app/styles/board/board.scss
#board-container {
	display: flex;
	flex-direction: column;
	height: 100%;
}

#board-table-wrapper {
	flex-grow: 1;
	padding: 0 10px 10px;
}

#table {
	background-color: white;
	height: 100%;
	table-layout: fixed;

	td {
		border: 1px solid #d0d0d0;
		vertical-align: top;
	}

	th {
		border: 1px solid #d0d0d0;
		height: 50px;
		padding: 5px;
		text-align: center;

		small {
			font-weight: normal;
		}
	}

	thead tr {
		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
	}
}

.task {
	background-color: white;
	border: 1px solid #d0d0d0;
	border-radius: 3px;
	margin: 5px;

	header {
		font-size: 12px;
		min-height: 10px;
		padding-left: 5px;
	}

	section {
		padding: 5px;
	}

	footer {
		padding: 0 5px;

		.fa {
			text-align: center;
			width: 14px;
		}
	}
}

.as-sortable-dragging > div {
	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.as-sortable-placeholder {
	border: 2px dashed #ddd;
}

.column-options {
	padding: 10px;
}

.collection .collection-item.label-collection-item {
	min-height: 60px;
}

.label-sample {
	margin: 0 7px 14px;
	width: 37px;
}

#board-info-hidden-tasks {
	height: 36px;
	line-height: 36px;
	padding-left: 1rem;
}

#board-statistics-preloader-wrapper {
	padding: 100px 0;
	text-align: center;
}

#board-statistics-cumulative-vlow-diagram-container {
	min-width: 800px;
}

// filters
#board-filters-button-hide {
	bottom: 1rem;
	left: 0;
	position: absolute;
}
#board-filters-button-clear-all {
	bottom: 1rem;
	position: absolute;
	right: 0;
}

